--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,9 +25,10 @@ repositories {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+
     compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.android.support:design:25.0.1'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
-
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 }
