--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="weathernotificationservice.wns.LoginActivity" android:theme="@style/AppTheme.Dark" />
+        <activity android:name="weathernotificationservice.wns.LoginActivity" android:theme="@style/AppTheme.Dark" android:windowSoftInputMode="stateAlwaysHidden"/>
         <activity android:name="weathernotificationservice.wns.SignupActivity" android:theme="@style/AppTheme.Dark" />
         <activity
             android:name="com.facebook.CustomTabActivity"
