--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,10 +6,11 @@ android {
     defaultConfig {
         applicationId "weathernotificationservice.wns"
         minSdkVersion 15
-        targetSdkVersion 25
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -29,6 +30,11 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'com.google.firebase:firebase-auth:10.0.1'
     compile 'com.google.firebase:firebase-database:10.0.1'
+    compile 'com.android.support:support-v4:23.1.1'
+    compile 'com.android.support:cardview-v7:23.1.1'
+    compile 'com.google.android.apps.dashclock:dashclock-api:+'
+    compile 'com.roughike:bottom-bar:1.4.0.1'
+    compile 'com.diogobernardino:williamchart:2.2'
     testCompile 'junit:junit:4.12'
 }
 
