--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,14 +23,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="weathernotificationservice.wns.activities.LoginActivity" android:theme="@style/AppTheme.Dark" />
+        <activity android:name="weathernotificationservice.wns.activities.SignupActivity" android:theme="@style/AppTheme.Dark" />
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:label="@string/title_activity_profile"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".SignupActivity"
-            android:label="@string/title_activity_login"
-            android:theme="@style/AppTheme.NoActionBar" />
+        <!--<activity-->
+            <!--android:name=".activities.SignupActivity"-->
+            <!--android:label="@string/title_activity_login"-->
+            <!--android:theme="@style/AppTheme.NoActionBar" />-->
         <activity
             android:name="com.facebook.CustomTabActivity"
             android:exported="true">
@@ -53,10 +55,10 @@
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
 
-        <activity
-            android:name=".ResetPasswordActivity"
-            android:label="@string/title_activity_reset_password"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <!--<activity-->
+            <!--android:name=".activities.ResetPasswordActivity"-->
+            <!--android:label="@string/title_activity_reset_password"-->
+            <!--android:theme="@style/AppTheme.NoActionBar"></activity>-->
 
 
         <activity
