--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,8 +35,12 @@ dependencies {
     compile 'com.google.android.apps.dashclock:dashclock-api:+'
     compile 'com.roughike:bottom-bar:1.4.0.1'
     compile 'com.diogobernardino:williamchart:2.2'
+    compile 'com.google.firebase:firebase-messaging:10.0.1'
+    compile 'com.google.firebase:firebase-ads:10.0.1'
     testCompile 'junit:junit:4.12'
 }
+
+
 
 
 
