--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         </activity>
         <activity android:name="weathernotificationservice.wns.activities.LoginActivity" android:theme="@style/AppTheme.Dark" />
         <activity android:name="weathernotificationservice.wns.activities.SignupActivity" android:theme="@style/AppTheme.Dark" />
+        <activity android:name="weathernotificationservice.wns.activities.ResetPasswordActivity" android:theme="@style/AppTheme.Dark" />
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/title_activity_profile"
