--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,11 +31,10 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'com.google.firebase:firebase-auth:10.2.1'
     compile 'com.google.android.gms:play-services-auth:10.2.1'
-
     compile 'com.google.firebase:firebase-database:10.2.1'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
-    compile 'com.google.android.apps.dashclock:dashclock-api:+'
+    compile 'com.google.android.apps.dashclock:dashclock-api:2.0.0'
     compile 'com.roughike:bottom-bar:1.4.0.1'
     compile 'com.diogobernardino:williamchart:2.2'
     compile 'com.google.firebase:firebase-messaging:10.0.1'
@@ -44,15 +43,5 @@ dependencies {
     compile 'com.android.support:support-vector-drawable:25.3.1'
     testCompile 'junit:junit:4.12'
 }
-
-
-
-
-
-
-
-
-
-
 
 apply plugin: 'com.google.gms.google-services'
