--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,13 +25,13 @@
         </activity>
         <activity
             android:name=".activities.LoginActivity"
-            android:theme="@style/AppTheme.Dark" />
+            android:theme="@style/AppTheme.NoStatusBar" />
         <activity
             android:name=".activities.SignupActivity"
-            android:theme="@style/AppTheme.Dark" />
+            android:theme="@style/AppTheme.NoStatusBar" />
         <activity
             android:name=".activities.ResetPasswordActivity"
-            android:theme="@style/AppTheme.Dark" />
+            android:theme="@style/AppTheme.NoStatusBar" />
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/title_activity_profile"
